# homomorphicmatrix

./: .gitignore  CMakeLists.txt  README.md  bench.cpp  bench.h  hlt_bench.sh  linear_bench.sh  packed_conv.cpp  swap_slot.cpp  tifs_bench.sh
bench/: CMakeLists.txt  bench.h  direct_conv.cpp  mod_speed.cpp  packed_conv.cpp  pc_toeplitz.cpp
bench_hlt/: CMakeLists.txt  bench.h  general_matrix.cpp  mod_speed.cpp  packed_conv.cpp  pc_toeplitz.cpp
native/bench_hlt/: bench.h  general_matrix.cpp
native/bench_tifs/: CMakeLists.txt  bench.h  direct_conv.cpp  general_matrix.cpp  packed_conv.cpp
native/examples/: 8_kazumaexample.cpp  CMakeLists.txt  examples.cpp  examples.h  simd.cpp  simd.h  testprimitives.cpp  testprimitives.h  testutil.cpp  testutil.h
native/src/seal/: decryptor.cpp  decryptor.h  evaluator.cpp  evaluator.h  keygenerator.cpp
native/src/seal/util/: CMakeLists.txt  defines.h  linarith.cpp  linarith.h  packedconv.cpp  packedconv.h  uintlinarith.cpp  uintlinarith.h
plot/: tifs_plot.py
plotting/: compare_packing.py  graphmaker.py  tifs_plot.py
src/: CMakeLists.txt  decryptor_lt.cpp  decryptor_lt.h
src/util/: CMakeLists.txt  common.h  convolution.cpp  convolution.h  define_tifs.h  packedconv.cpp  packedconv.h  uintlinarith.cpp  uintlinarith.h
test/: CMakeLists.txt  experiment.cpp  kernelInfo.cpp  matrix.cpp  ntt.cpp  testcommon.h  testmain.cpp
